--- a/resources/lang/zh-tw.json
+++ b/resources/lang/zh-tw.json
@@ -96,7 +96,7 @@
 	"Admin" : "管理員",
 	"Borrower" : "借閱人",
 	"Donors" : "捐贈人",
-	"Agency" : "機構",
+	"Agencies" : "機構",
 
 	"Books Management" : "圖書管理",
 	"Books" : "書本",
