Selectbar-Search Done

--- a/resources/lang/zh-tw.json
+++ b/resources/lang/zh-tw.json
@@ -93,8 +93,8 @@
 	"Last Updated": "最近修改日期：",
 
 	"People Management" : "人事管理",
-	"Admin" : "管理員",
-	"Borrower" : "借閱人",
+	"Admins" : "管理員",
+	"Borrowers" : "借閱人",
 	"Donors" : "捐贈人",
 	"Agencies" : "機構",
 
