--- a/resources/lang/zh-tw.json
+++ b/resources/lang/zh-tw.json
@@ -1,120 +1,121 @@
 {
-	"A fresh verification link has been sent to your email address.": "新的驗證連結已發送到您的 E-mail。",
-	"All rights reserved.": "保留一切權利。",
-	"Before proceeding, please check your email for a verification link.": "在繼續之前請先驗證您的 E-mail。",
-	"click here to request another": "點擊重新發送 E-mail",
-	"Confirm Password": "確認密碼",
-	"E-Mail Address": "E-mail",
-	"Error": "錯誤",
-	"Forbidden": "無法瀏覽",
-	"Forgot Your Password?": "忘記密碼？",
-	"Go Home": "回首頁",
-	"Hello!": "您好：",
-	"hi": "嗨",
-	"If you did not create an account, no further action is required.": "如果您未註冊帳號，請忽略此郵件。",
-	"If you did not receive the email": "如果您沒有收到",
-	"If you did not request a password reset, no further action is required.": "如果您未申請重設密碼，請忽略此郵件。",
-	"If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "如果您點擊「:actionText」按鈕時出現問題，請複製下方連結到瀏覽器中開啟： [:actionURL](:actionURL)",
-	"Login": "登入",
-	"Logout": "登出",
+    "A fresh verification link has been sent to your email address.": "新的驗證連結已發送到您的 E-mail。",
+    "All rights reserved.": "保留一切權利。",
+    "Before proceeding, please check your email for a verification link.": "在繼續之前請先驗證您的 E-mail。",
+    "click here to request another": "點擊重新發送 E-mail",
+    "Confirm Password": "確認密碼",
+    "E-Mail Address": "E-mail",
+    "Error": "錯誤",
+    "Forbidden": "無法瀏覽",
+    "Forgot Your Password?": "忘記密碼？",
+    "Go Home": "回首頁",
+    "Hello!": "您好：",
+    "hi": "嗨",
+    "If you did not create an account, no further action is required.": "如果您未註冊帳號，請忽略此郵件。",
+    "If you did not receive the email": "如果您沒有收到",
+    "If you did not request a password reset, no further action is required.": "如果您未申請重設密碼，請忽略此郵件。",
+    "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "如果您點擊「:actionText」按鈕時出現問題，請複製下方連結到瀏覽器中開啟： [:actionURL](:actionURL)",
+    "Login": "登入",
+    "Logout": "登出",
 
-	"Home": "首頁",
-	"About": "關於我們",
-	"News": "最新消息",
-	"Events": "近期活動",
-	"Products": "商品",
-	"Location": "位置",
-	"Contact": "聯絡我們",
-	"Contact Us": "聯絡我們",
+    "Home": "首頁",
+    "About": "關於我們",
+    "News": "最新消息",
+    "Events": "近期活動",
+    "Products": "商品",
+    "Location": "位置",
+    "Contact": "聯絡我們",
+    "Contact Us": "聯絡我們",
 
-	"Terms & Conditions": "條款細項",
-	"Privacy Policy": "隱私政策",
+    "Terms & Conditions": "條款細項",
+    "Privacy Policy": "隱私政策",
 
-	"Name": "姓名",
-	"Oh no": "不好了",
-	"Page Expired": "頁面逾時",
-	"Page Not Found": "頁面不存在",
-	"Password": "密碼",
-	"Please click the button below to verify your email address.": "請點擊下面按鈕驗證您的 E-mail：",
-	"Regards": "致敬",
-	"Register": "註冊",
-	"Remember Me": "記住我",
-	"Reset Password": "重設密碼",
-	"Reset Password Notification": "重設密碼通知",
-	"Send Password Reset Link": "發送重設密碼連結",
-	"Service Unavailable": "暫時不提供服務",
-	"Sorry, you are forbidden from accessing this page.": "很抱歉！您無法瀏覽此頁面。",
-	"Sorry, the page you are looking for could not be found.": "很抱歉！您瀏覽的頁面不存在。",
-	"Sorry, you are making too many requests to our servers.": "很抱歉！您向我們的伺服器發出太多請求了。",
-	"Sorry, you are not authorized to access this page.": "很抱歉！您沒有權限瀏覽此頁面。",
-	"Sorry, your session has expired. Please refresh and try again.": "很抱歉！您的 Session 已過期，請重新整理後再試一次。",
-	"Sorry, we are doing some maintenance. Please check back soon.": "很抱歉！我們正在維護網站，請稍候再回來。",
-	"Toggle navigation": "切換導航",
-	"Too Many Requests": "太多請求",
-	"Unauthorized": "權限不足",
-	"Verify Email Address": "驗證 E-mail",
-	"Verify Your Email Address": "驗證 E-mail",
-	"You are receiving this email because we received a password reset request for your account.": "您收到此電子郵件是因為我們收到了您帳戶的密碼重設請求。",
-	"Whoops!": "哎呦！",
-	"Whoops, something went wrong on our servers.": "很抱歉！伺服器錯誤。",
+    "Name": "姓名",
+    "Oh no": "不好了",
+    "Page Expired": "頁面逾時",
+    "Page Not Found": "頁面不存在",
+    "Password": "密碼",
+    "Please click the button below to verify your email address.": "請點擊下面按鈕驗證您的 E-mail：",
+    "Regards": "致敬",
+    "Register": "註冊",
+    "Remember Me": "記住我",
+    "Reset Password": "重設密碼",
+    "Reset Password Notification": "重設密碼通知",
+    "Send Password Reset Link": "發送重設密碼連結",
+    "Service Unavailable": "暫時不提供服務",
+    "Sorry, you are forbidden from accessing this page.": "很抱歉！您無法瀏覽此頁面。",
+    "Sorry, the page you are looking for could not be found.": "很抱歉！您瀏覽的頁面不存在。",
+    "Sorry, you are making too many requests to our servers.": "很抱歉！您向我們的伺服器發出太多請求了。",
+    "Sorry, you are not authorized to access this page.": "很抱歉！您沒有權限瀏覽此頁面。",
+    "Sorry, your session has expired. Please refresh and try again.": "很抱歉！您的 Session 已過期，請重新整理後再試一次。",
+    "Sorry, we are doing some maintenance. Please check back soon.": "很抱歉！我們正在維護網站，請稍候再回來。",
+    "Toggle navigation": "切換導航",
+    "Too Many Requests": "太多請求",
+    "Unauthorized": "權限不足",
+    "Verify Email Address": "驗證 E-mail",
+    "Verify Your Email Address": "驗證 E-mail",
+    "You are receiving this email because we received a password reset request for your account.": "您收到此電子郵件是因為我們收到了您帳戶的密碼重設請求。",
+    "Whoops!": "哎呦！",
+    "Whoops, something went wrong on our servers.": "很抱歉！伺服器錯誤。",
 
-	"Close Window": "關閉視窗",
-	"Enter Your E-Mail Address...": "請輸入電子信箱...",
-	"Enter Your Password...": "請輸入密碼...",
-	"Login With...": "使用其他平台 登入/註冊 ",
-	"Not a member yet?": "還不是會員嗎?",
-	"Sign Up Now!": "立即註冊",
+    "Close Window": "關閉視窗",
+    "Enter Your E-Mail Address...": "請輸入電子信箱...",
+    "Enter Your Password...": "請輸入密碼...",
+    "Login With...": "使用其他平台 登入/註冊 ",
+    "Not a member yet?": "還不是會員嗎?",
+    "Sign Up Now!": "立即註冊",
 
-	"Username": "暱稱",
-	"Gender": "性別",
-	"Birthday": "生日",
-	"Male": "男",
-	"Female": "女",
+    "Username": "暱稱",
+    "Gender": "性別",
+    "Birthday": "生日",
+    "Male": "男",
+    "Female": "女",
 
-	"Enter Your Username...": "請輸入暱稱...",
-	"Enter Your Password Again...": "請再次輸入密碼...",
-	"Enter Your Birthday...": "請輸入生日...",
-	"Profile": "個人檔案",
-	"Settings": "設定",
-	"Activity Log": "活動日誌",
-	"Backend": "後臺管理",
-	"Search for...": "搜尋...",
-	"Dashboard": "資訊總覽",
-	"Charts": "圖表",
-	"Tables": "表格",
+    "Enter Your Username...": "請輸入暱稱...",
+    "Enter Your Password Again...": "請再次輸入密碼...",
+    "Enter Your Birthday...": "請輸入生日...",
+    "Profile": "個人檔案",
+    "Settings": "設定",
+    "Activity Log": "活動日誌",
+    "Backend": "後臺管理",
+    "Search for...": "搜尋...",
+    "Dashboard": "資訊總覽",
+    "Charts": "圖表",
+    "Tables": "表格",
 
-	"Backend Control": "後臺管理",
-	"Basic:" : "基本管理",
-	"Related:" : "相關管理",
-	"Index": "首頁",
-	"Create": "創建",
-	"Show": "顯示",
-	"Edit": "編輯",
-	"Last Updated": "最近修改日期：",
+    "Backend Control": "後臺管理",
+    "Basic:": "基本管理",
+    "Related:": "相關管理",
+    "Index": "首頁",
+    "Create": "創建",
+    "Show": "顯示",
+    "Edit": "編輯",
+    "Last Updated": "最近修改日期：",
 
-	"People Management" : "人事管理",
-	"Admins" : "管理員",
-	"Borrowers" : "借閱人",
-	"Donors" : "捐贈人",
-	"Agencies" : "單位",
+    "People Management": "人事管理",
+    "Admins": "管理員",
+    "Borrowers": "借閱人",
+    "Donors": "捐贈人",
+    "Agencies": "單位",
 
-	"Books Management" : "圖書管理",
-	"Books" : "全部書籍",
-	"Purchase" : "採購書籍",
-	"Donate" : "捐入與轉贈",
-	"Barcode" : "條碼",
+    "Books Management": "圖書管理",
+    "Books": "全部書籍",
+    "Purchase": "採購書籍",
+    "Donate": "捐入與轉贈",
+    "Barcode": "條碼",
 
-	"Circulation" : "借閱管理",
-	"Borrow" : "借書",
-	"Return" : "還書",
-	"Overdue" : "逾期",
+    "Circulation": "借閱管理",
+    "Borrow": "借書",
+    "Return": "還書",
+    "Overdue": "逾期",
 
-	"General Settings" : "通用設定",
-	"Recommend" : "推薦書本",
-	
-	"Change Password" : "更改密碼",
+    "General Settings": "通用設定",
+    "Recommend": "推薦書本",
 
-	"Notification" : "通知",
-	"Log File" : "日誌檔",
-	"Statistics" : "統計"
+    "Change Password": "更改密碼",
+
+    "Notification": "通知",
+    "Log File": "日誌檔",
+    "Statistics": "統計",
+    "Information": "基本資料維護"
 }
