--- a/resources/lang/zh-TW.json
+++ b/resources/lang/zh-TW.json
@@ -110,7 +110,7 @@
     "Overdue": "逾期",
 
     "General Settings": "通用設定",
-    "Recommend": "推薦書本",
+    "Recommend": "推薦書籍",
 
     "Change Password": "更改密碼",
 
